Applied nameing changes per request from Dan.

--- a/etc/mongodb/mongodb-kbase.conf
+++ b/etc/mongodb/mongodb-kbase.conf
@@ -2,11 +2,11 @@
 ### Basic Defaults
 ##
 bind_ip = 127.0.0.1
-port = 27017        # TENANT
+port = 27018        # TENANT
 fork = true
-pidfilepath = /var/run/mongodb/mgrast.pid    # TENANT
-logpath = /var/log/mongodb/mgrast.log        # TENANT
-dbpath = /dpool/mgrast/mongodb
+pidfilepath = /var/run/mongodb/mongodb-kbase.pid    # TENANT
+logpath = /var/log/mongodb/mongodb-kbase.log        # TENANT
+dbpath = /dpool/kbase/mongodb                # TENANT
 journal = true
 
 # Enables periodic logging of CPU utilization and I/O wait
