Updated multi-tenant for production server rollout - Updated mongodb configs for correct logging - Updated shockd configs for new version of shock (config file changes)   and to fix logging. - Added source adapter routing config for linux (we are multi-homed host)

--- a/etc/shock/shockd-kbase.conf
+++ b/etc/shock/shockd-kbase.conf
@@ -1,5 +1,5 @@
 [Admin]
-email=hunter@mcs.anl.gov   # INSTANCE   for TESTING ONLY
+email=dolson@mcs.anl.gov   # INSTANCE   for TESTING ONLY
 
 [Anonymous]
 # Controls an anonymous user's ability to read/write
@@ -15,18 +15,20 @@ create-user=false
 globus_token_url=https://nexus.api.globusonline.org/goauth/token?grant_type=client_credentials
 globus_profile_url=https://nexus.api.globusonline.org/users
 
-[Directories]
+[Paths]
 # See documentation for details of deploying Shock
-site=/dpool/kbase/shock/site     # INSTANCE
+site=/dpool/shock_site     # GLOBAL in common for now
 data=/dpool/kbase/shock/data     # INSTANCE
-logs=/var/log/shock/shockd-kbase  # INSTANCE and a DIR!
+logs=/var/log/shock/kbase  # INSTANCE and a DIR!
+pidfile=/var/run/shock/shockd-kbase.pid     # TENANT
 
 # Comma delimited search path available for remote path uploads. Only remote paths that prefix 
 # match one of the following will be allowed. Note: poor choices can result in security concerns.
 local_paths=/dpool/kbase/shockd/transfer           # INSTANCE
 
 [External]
-#site-url=http://localhost   
+#site-url=http://shock1.chicago.kbase.us
+
 
 [SSL]
 enable=false
@@ -50,11 +52,11 @@ id=unique:true
 # IP and port for api
 # Note: use of port 80 may require root access
 # 0.0.0.0 will bind Shock to all IP's
-api-ip=192.5.200.71                  # TENANT
+api-ip=140.221.43.49                 # TENANT
 api-port=80                          # TENANT
 
 [Runtime]
-GOMAXPROCS=22
-pidfile=/var/run/shock/shockd-kbase.pid     # TENANT
+GOMAXPROCS=4
 
+## END OF LINE ##
 
