--- a/etc/shock/shockd-mgrast.conf
+++ b/etc/shock/shockd-mgrast.conf
@@ -15,11 +15,12 @@ create-user=false
 globus_token_url=https://nexus.api.globusonline.org/goauth/token?grant_type=client_credentials
 globus_profile_url=https://nexus.api.globusonline.org/users
 
-[Directories]
+[Paths]
 # See documentation for details of deploying Shock
-site=/dpool/mgrast/shock/site     # INSTANCE
+site=/dpool/shock_site     # GLOBAL - for now.
 data=/dpool/mgrast/shock/data     # INSTANCE
-logs=/var/log/shock/shockd-mgrast  # INSTANCE and a DIR!
+logs=/var/log/shock/mgrast        # INSTANCE and a DIR!
+pidfile=/var/run/shock/shockd-mgrast.pid        # INSTANCE
 
 # Comma delimited search path available for remote path uploads. Only remote paths that prefix 
 # match one of the following will be allowed. Note: poor choices can result in security concerns.
@@ -50,11 +51,10 @@ id=unique:true
 # IP and port for api
 # Note: use of port 80 may require root access
 # 0.0.0.0 will bind Shock to all IP's
-api-ip=140.221.76.127       # INSTANCE
+api-ip=140.221.76.25       # INSTANCE
 api-port=80                 # INSTANCE
 
 [Runtime]
-GOMAXPROCS=22
-pidfile=/var/run/shock/shockd-mgrast.pid        # INSTANCE
+GOMAXPROCS=20
 
 
